--- a/public/styles.css
+++ b/public/styles.css
@@ -1,43 +1,81 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+html, body {
+    height: 95%;
     margin: 0;
+    font-family: 'Arial', sans-serif;
 }
 
-.container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
+.card {
+    border-radius: 10px;
+    background-color: #f8f9fa; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-form {
+    margin: 3rem;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-label {
-    margin-bottom: 8px;
+.container {
+    flex: 1;
+    display: flex;
+}
+
+.image-container {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+}
+
+.left-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px; 
+}
+
+.form-container {
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.name-group {
+    display: flex;
+}
+
+.name-group input {
+    flex: 1;
+    margin-right: 10px;
+    height: 40px;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 1px solid #ced4da; 
+    border-radius: 4px; 
 }
 
 input {
+    width: 100%;
+    height: 40px; 
     padding: 8px;
-    margin-bottom: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ced4da; 
+    border-radius: 4px; 
 }
 
 button {
-    background-color: #4caf50;
-    color: white;
+    width: 100%;
+    height: 40px; 
     padding: 10px;
+    background-color: #28a745; 
+    color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 4px; 
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #218838; 
 }
